Fixing movie spacing

--- a/src/styles/events.css
+++ b/src/styles/events.css
@@ -39,15 +39,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 280px;
-    gap: 5px;
+    height: 270px;
+    justify-content: space-between;
 }
 
 .cols2 .event-movies {
     height: auto;
-}
-
-.event-movie {
 }
 
 .event-movie h4 {
